新增bilibili直播弹幕、触手直播源

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,11 @@
     </properties>
 
     <dependencies>
+        <!--websocket-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
         <!--swagger文档-->
         <dependency>
             <groupId>io.springfox</groupId>
