--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,9 +1,9 @@
 spring:
   redis:
-    host: 127.0.0.1
+    host: 127。0。0。1
     # Redis服务器连接端口
     port: 6379
-    jedis
+    jedis:
       pool:
         #连接池最大连接数（使用负值表示没有限制）
         max-active: 100
